--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,17 @@ spring:
           timeout: 5
           clone-on-start: true
           force-pull: true
+        encrypt:
+          enabled: false
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    shutdown:
+      enabled: true
+
+encrypt:
+  key: V2k@7g#eQ3rL!mT9
